[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [".venv","tutorials", "assets", "data"]

[tool.ruff.lint]
select = ["NPY201"]

[project]
name = "momentfm"
version = "0.1.3"
dependencies = [
  "huggingface-hub>=0.34.0",
  "numpy>=2.2",
  "torch>=2.1",              # package was tested on 2.0.1
  "transformers>=4.57.3",
]

requires-python = ">=3.10"

authors = [
  {name = "Mononito Goswami", email = "mononitog@hotmail.com"},
  {name = "Konrad Szafer"},
  {name = "Arjun Choudhry"},
  {name = "Yifu Cai"},
]

maintainers = [
  {name = "Mononito Goswami", email = "mononitog@hotmail.com"},
  {name = "Konrad Szafer", email = "szafer.konrad@gmail.com"},
  {name = "Yifu Cai", email = "yifuc@andrew.cmu.edu"},
  {name = "Michal Wilinski", email = "mwilisk@andrew.cmu.edu"},
]

description = "MOMENT: A Family of Open Time Series Foundation Models"
readme = "README.md"
license = {file = "LICENSE"}

keywords = [
    "time series", 
    "forecasting", 
    "classification",
    "imputation", 
    "anomaly detection",  
    "transformers", 
    "pytorch", 
    "huggingface", 
    "moment",
    "foundation models",
    "large language models",
    ]

classifiers = [
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://moment-timeseries-foundation-model.github.io/"
Repository = "https://github.com/moment-timeseries-foundation-model/moment"
"Bug Tracker" = "https://github.com/moment-timeseries-foundation-model/moment/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
